updated format and removed unused imports.